--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-/*-- robocze komentarze
-
-- walidator - html
-- buttony - stan active
-
---*/
 :root {
     --brand-color: #212121;
 }
@@ -33,27 +27,35 @@ ul {
     cursor: pointer;
 }
 .nav-links {
+    font-family: "Roboto";
+    font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.14;
+    line-height: 16px;
     letter-spacing: 0.02em;
     text-decoration: none;
-    color: var (--brand-color);
+    color: var(--brand-color);
 }
 
 .nav-links:hover {
     color: #2196f3;
 }
 
-.contakct-link {
+.contact-link {
+    font-family: "Roboto";
+    font-style: normal;
     font-weight: 500;
     font-size: 14px;
-    line-height: 1.14;
+    line-height: 16px;
     letter-spacing: 0.02em;
+    text-decoration: none;
     color: #757575;
 }
 
-.contact-link:hover .contact-link:focus {
+.contact-link:hover {
+    color: #2196f3;
+}
+.contact-link:focus {
     color: #2196f3;
 }
 
@@ -68,13 +70,30 @@ ul {
     text-transform: uppercase;
 
     color: #ffffff;
-    background-color: var(--brand-color);
+    background-color: #2f303a;
 }
 
 .first-cta {
     background: #2196f3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border-color: #2196f3;
+    width: 200px;
+    height: 50px;
+
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+
+    color: #ffffff;
+
+    padding-left: 42px;
 }
 
 .article-title {
@@ -121,10 +140,9 @@ ul {
     line-height: 1.71;
 
     letter-spacing: 0.03em;
-    background-color: var (--brand-color);
+    background-color: #2f303a;
     color: #ffffff;
 }
-/*-- tu przerwa --*/
 
 .product-name {
     font-weight: 500;
@@ -140,4 +158,25 @@ ul {
     text-align: left;
     letter-spacing: 0.03em;
     color: #757575;
+}
+
+.portfolio-filter {
+    background: #2196f3;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    border-color: #2196f3;
+    width: 121px;
+    height: 38px;
+
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: #ffffff;
 }
