--- a/css/styles.css
+++ b/css/styles.css
@@ -161,13 +161,30 @@ ul {
 }
 
 .portfolio-filter {
+    background: #f5f4fa;
+    border-radius: 4px;
+    border-color: #f5f4fa;
+    width: 121px;
+    height: 38px;
+
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1, 62;
+
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    color: var(--brand-color);
+}
+
+.portfolio-filter:active {
     background: #2196f3;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 4px;
     border-color: #2196f3;
-    width: 121px;
-    height: 38px;
 
     font-family: "Roboto";
     font-style: normal;
