--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,7 @@ ul {
 .nav-links {
     font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
     color: var(--brand-color);
@@ -41,7 +41,7 @@ ul {
 .contact-link {
     font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
     color: #757575;
@@ -162,7 +162,7 @@ ul {
 
     font-weight: 500;
     font-size: 16px;
-    line-height: 1, 62;
+    line-height: 1.62;
 
     text-align: center;
     letter-spacing: 0.03em;
